# ludo_plp

./: .cabal  .gitignore  CHANGELOG.md  LICENSE  README.md  logica.hs  ludo-plp-haskell.cabal  main.hs  save.hs  saved_game.json  types.hs
Haskell/: saved_game.json
Haskell/app/Game/: BotLogic.hs  CreateGame.hs  FindMoves.hs  LoadSaveState.hs  ProcessMove.hs
Haskell/app/Interface/: DrawOnBoard.hs  Index.hs  InterfaceDebug.hs  Rendering.hs
Prolog/src/: auxiliary.pl  bot.pl  creategame.pl  findmoves.pl  gametypes.pl  index.pl  main.pl  processmove.pl  save.json  save_and_load.pl
app/: Game.hs  Interface.hs  InterfaceDebug.hs  Main.hs
app/Game/: Auxiliary.hs  BotLogic.hs  CreateGame.hs  FindMoves.hs  Index.hs  LoadSaveState.hs  ProcessMove.hs
app/Interface/: DrawGameUI.hs  DrawMenu.hs  DrawOnBoard.hs  Index.hs  InterfaceDebug.hs  RenderBoard.hs  Rendering.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
models/: GameTypes.hs
