cabal-version:      3.0
name:               ludo-plp-haskell
version:            0.1.0.0
synopsis:           ] 
-- description:
homepage:            
license:            BSD-3-Clause
license-file:       LICENSE
author:              
maintainer:          
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ludo-plp-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
